Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1715

flock deadlock detection does not work properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.5.0
    • None
    • 3
    • 8095

      flock deadlocks are checked on the first attempt to grant the flock only. if we try again to grant it after its blocking lock is cancelled, we do not check for deadlocks which also may exist.

      the reproducer is attached, its output is the following:
      4730: sleeping 1
      4731: taking lock0 [0, 100]
      4732: taking lock1 [100, 200]
      4731: done
      4731 sleeping 1
      4732: done
      4732 sleeping 2
      4730: taking lock2 [200, 300]
      4730: done
      4730: taking lock0 [0, 100]
      4731: taking lock3 [100, 300]
      4732: putting lock1 [100, 200]
      4732: done
      4732 Exit
      --> it is waiting forever here.

            keith Keith Mannthey (Inactive)
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: