LU-1715 ptlrpc: flock deadlock detection does not work

Perform deadlock detection during reprocess

Xyratex-bug-id: MRP-393
Signed-off-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Reviewed-by: Vitaly Fertman <vitaly_fertman@xyratex.com>
Reviewed-by: Bruce Korb <bruce_korb@xyratex.com>
Change-Id: Ie4d21da0a0b18458f786c9903663372aa24700fb