lustre/include/lustre_dlm.h
@@ -119,6 +119,7 @@ typedef enum {
 #define LDLM_FL_HAS_INTENT     0x001000 /* lock request has intent */
 #define LDLM_FL_CANCELING      0x002000 /* lock cancel has already been sent */
 #define LDLM_FL_LOCAL          0x004000 /* local lock (ie, no srv/cli split) */
+#define LDLM_FL_FLOCK_DEADLOCK 0x008000 /* deadlock detected */
 #define LDLM_FL_DISCARD_DATA   0x010000 /* discard (no writeback) on cancel */
 
 #define LDLM_FL_NO_TIMEOUT     0x020000 /* Blocked by group lock - wait
@@ -194,7 +195,7 @@ typedef enum {
 #define LDLM_AST_DISCARD_DATA  0x80000000 /* Add FL_DISCARD to blocking ASTs */
 
 /* Flags sent in AST lock_flags to be mapped into the receiving lock. */
-#define LDLM_AST_FLAGS         (LDLM_FL_DISCARD_DATA)
+#define LDLM_AST_FLAGS         (LDLM_FL_DISCARD_DATA|LDLM_FL_FLOCK_DEADLOCK)
 
 /* 
  * --------------------------------------------------------------------------
