lustre/obdclass/lprocfs_status.c
@@ -882,6 +882,7 @@ static const char *obd_connect_names[] = {
 	"lightweight_conn",
 	"short_io",
 	"pingless",
+	"flock_deadlock",
 	"unknown",
         NULL
 };
